# lpepy

./: LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
lpepy/: calibrate.py  capture.py  led.py  util.py  world.py
stubs/cv2/: __init__.pyi  samples.pyi
